src/snapshots/tuisage__ui__tests__snapshot_no_subcommands.snap
---
source: src/ui.rs
assertion_line: 637
expression: output
---
┌ Command ─────────────────────────────────────────────────────────────────────┐
│ $ simple                                                                     │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Flags ───────────────────────────────────────────────────────────────────────┐
│▶ [·] -o, --output = <path>                                        Output path│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Arguments ───────────────────────────────────────────────────────────────────┐
│  ● <file> = (empty)                                           File to process│
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 ⏎/Space toggle  ⌫ clear  ↑↓ navigate  ⇥ next  / filter  ^u reset  ^r run  q qui
