src/snapshots/tuisage__ui__tests__snapshot_select_scrollbar.snap
---
source: src/ui.rs
expression: output
---
┌ Command ─────────────────────────────────────────────────────────────────────────────────────────┐
│ $ test test                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Commands ────────────────────────────┐┌ Flags ───────────────────────────────────────────────────┐
│▶ test                                ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      │└──────────────────────────────────────────────────────────┘
│                                      │┌ Arguments ───────────────────────────────────────────────┐
│                                      ││▶ ● <item> = ▎                                            │
│                                      ││            │opt01  ┃                                     │
│                                      ││            │opt02  ┃                                     │
│                                      ││            │opt03  │                                     │
│                                      ││            │opt04  │                                     │
│                                      ││            │opt05  │                                     │
└──────────────────────────────────────┘└────────────└───────┘─────────────────────────────────────┘
 ↑↓ select  ⏎ confirm  Esc keep text                                                   T: [Dracula]
